# opencode-runner

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-TW.md  index.html  package-lock.json  package.json  tasks.example.toml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  LanguageProvider.tsx  api.ts  config.rs  cronDescribe.ts  db.rs  i18n.ts  lib.rs  main.rs  main.tsx  runner.rs  scheduler.rs  styles.css  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  db.rs  gitlock.rs  lib.rs  main.rs  mcp_memory.rs  proc.rs  runner.rs  scheduler.rs  state.rs
src-tauri/src/opencode/: cli.rs  mod.rs  storage.rs
src/components/: EditTab.tsx  HistoryTab.tsx  Icon.tsx  ScheduleEditor.tsx  SectionNav.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusChip.tsx  ThemeToggle.tsx  UpdateBanner.tsx
src/opencode/: cli.rs  client.rs  mod.rs  storage.rs
