[package]
name = "opencode_orchestrator"
version = "0.5.2"
edition = "2021"
description = "Schedule and run opencode tasks, browse their conversation history. (Tauri 2 / React port)"

[lib]
name = "opencode_orchestrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 — webview shell, IPC, tray, dialog.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

# In-app auto-update: check a signed latest.json, download + install, relaunch.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Async + JSON IPC plumbing
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "io-util", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# SQLite (run history + opencode session inspection)
rusqlite = { version = "0.32", features = ["bundled"] }

# Scheduling
tokio-cron-scheduler = "0.13"
cron = "0.13"
chrono = { version = "0.4", features = ["serde"] }

# Util
anyhow = "1"
thiserror = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

